force-app/main/default/objects/cgcloud__Tactic__c/fields/cgcloud__Compensation_Model__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Compensation_Model__c</fullName>
    <description>Which compensation model should be used for a tactic</description>
    <inlineHelpText>Rule to calculate promotion spend.</inlineHelpText>
    <label>Compensation Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LumpSum</fullName>
                <default>true</default>
                <label>LumpSum</label>
            </value>
            <value>
                <fullName>WeeklyLumpSum</fullName>
            </value>
            <value>
                <fullName>PerCase</fullName>
                <label>PerPack</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>