force-app/main/default/objects/cgcloud__Tactic__c/fields/TPM_Classification__c.field-meta.xml
<CustomField>
    <fullName>TPM_Classification__c</fullName>
    <formula>TEXT(cgcloud__Tactic_Template__r.TPM_Tactic_Template_Classification__c)</formula>
    <label>Classification</label>
    <type>Text</type>
</CustomField>