force-app/main/default/objects/cgcloud__Tactic__c/fields/TPM_PaidInFull__c.field-meta.xml
<CustomField>
    <fullName>TPM_PaidInFull__c</fullName>
    <formula>IF(cgcloud__Plan_Spend__c = cgcloud__To_Date_Paid_Amount__c, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid In Full</label>
    <type>Checkbox</type>
</CustomField>