force-app/main/default/objects/cgcloud__Tactic__c/fields/TPM_Payment_Info__c.field-meta.xml
<CustomField>
    <fullName>TPM_Payment_Info__c</fullName>
    <description>The payment information for this tactic</description>
    <label>Payment Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rebates</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>