force-app/main/default/objects/cgcloud__Tactic__c/fields/TPM_Plan_Spend__c.field-meta.xml
<CustomField>
    <fullName>TPM_Plan_Spend__c</fullName>
    <description>Formula field for converting 4 decimal places to 2 for Plan spend</description>
    <formula>cgcloud__Plan_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>