force-app/main/default/objects/cgcloud__Tactic__c/fields/TPM_Price_Basis__c.field-meta.xml
<CustomField>
    <fullName>TPM_Price_Basis__c</fullName>
    <label>Price Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross (US)</fullName>
            </value>
            <value>
                <fullName>NIV (IT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>