force-app/main/default/objects/cgcloud__Tactic__c/fields/TPM_Redemption_Pct__c.field-meta.xml
<CustomField>
    <fullName>TPM_Redemption_Pct__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Redemption %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>