force-app/main/default/objects/cgcloud__Tactic__c/fields/TPM_Tactic_Template_Subset__c.field-meta.xml
<CustomField>
    <fullName>TPM_Tactic_Template_Subset__c</fullName>
    <formula>TEXT(cgcloud__Tactic_Template__r.cgcloud__Display_KPI_Subset__c)</formula>
    <label>Tactic Template Subset</label>
    <type>Text</type>
</CustomField>