force-app/main/default/objects/cgcloud__Tactic__c/fields/TPM_Volume_Basis__c.field-meta.xml
<CustomField>
    <fullName>TPM_Volume_Basis__c</fullName>
    <label>Volume Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipment</fullName>
                <default>true</default>
                <label>Shipment</label>
            </value>
            <value>
                <fullName>Consumption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>