force-app/main/default/objects/cgcloud__Tactic__c/recordTypes/cgcloud__Display.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Display</fullName>
    <active>true</active>
    <label>Display</label>
</RecordType>