force-app/main/default/objects/cgcloud__Tactic__c/validationRules/cgcloud__Avoid_Change_External_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Change_External_ID</fullName>
    <active>false</active>
    <description>ExternalId can&apos;t be edited if it has an existent value.</description>
    <errorConditionFormula>AND (
  ISCHANGED(cgcloud__ExternalId__c),
  NOT(ISBLANK(PRIORVALUE(cgcloud__ExternalId__c)))
)</errorConditionFormula>
    <errorDisplayField>cgcloud__ExternalId__c</errorDisplayField>
    <errorMessage>ExternalId can&apos;t be edited if it has an existent value.</errorMessage>
</ValidationRule>