force-app/main/default/objects/cgcloud__Tactic__c/validationRules/TPM_Redemption_Pct_Mandatory_Cond.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Redemption_Pct_Mandatory_Cond</fullName>
    <active>true</active>
    <description>Redemption % is a required field</description>
    <errorConditionFormula>IF(
ISPICKVAL( TPM_Volume_Basis__c , &quot;Consumption&quot;) &amp;&amp;
ISBLANK( TPM_Redemption_Pct__c ) , true, false
)</errorConditionFormula>
    <errorMessage>Redemption % is a required field</errorMessage>
</ValidationRule>