force-app/main/default/objects/cgcloud__Tactic__c/validationRules/TPM_RedemptionPct_And_Deal_Depth_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_RedemptionPct_And_Deal_Depth_Limit</fullName>
    <active>true</active>
    <description>Redemption % and Depth of Deal should be between 0 and 100</description>
    <errorConditionFormula>OR(
AND(
OR(
ISPICKVAL( cgcloud__Promotion__r.TPM_Phase__c, &apos;Planning&apos;),
ISPICKVAL( cgcloud__Promotion__r.TPM_Phase__c, &apos;Submitted For Approval&apos;)
),
OR(
TPM_Redemption_Pct__c &lt; 0,
TPM_Redemption_Pct__c &gt; 1
)
),
AND(
NOT(ISBLANK(TPM_Depth_of_Deal__c)),
OR(
ISPICKVAL( cgcloud__Promotion__r.TPM_Phase__c, &apos;Planning&apos;),
ISPICKVAL( cgcloud__Promotion__r.TPM_Phase__c, &apos;Submitted For Approval&apos;)
),
OR(
TPM_Depth_of_Deal__c &lt; 0,
TPM_Depth_of_Deal__c &gt; 1
)
)
)</errorConditionFormula>
    <errorMessage>Please ensure Redemption % and Depth of Deal value is between 0 and 100.</errorMessage>
</ValidationRule>