force-app/main/default/objects/cgcloud__Tactic__c/validationRules/TPM_Restrict_Negative_Tactic_Redemption.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Restrict_Negative_Tactic_Redemption</fullName>
    <active>true</active>
    <description>Validation to restrict negative value is Redemption %.</description>
    <errorConditionFormula>TPM_Redemption_Pct__c &lt; 0</errorConditionFormula>
    <errorDisplayField>TPM_Redemption_Pct__c</errorDisplayField>
    <errorMessage>Negative value is not allowed in Redemption %.</errorMessage>
</ValidationRule>