force-app/main/default/objects/cgcloud__Tactic__c/validationRules/TPM_Tactic_InstoreStartValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Tactic_InstoreStartValidation</fullName>
    <active>true</active>
    <description>Instore start date must be greater than or equal to today</description>
    <errorConditionFormula>ISPICKVAL(cgcloud__Promotion__r.TPM_Phase__c,&apos;Planning&apos;)&amp;&amp;  cgcloud__Instore_Date_From__c  &lt; TODAY()</errorConditionFormula>
    <errorMessage>Instore Start Date must be greater than or equal to the current date</errorMessage>
</ValidationRule>