force-app/main/default/objects/cgcloud__Tactic__c/validationRules/TPM_Tactic_Shipment_Instore_Validatio.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Tactic_Shipment_Instore_Validatio</fullName>
    <active>true</active>
    <description>Shipment start date must be less than or equal to In-store start date</description>
    <errorConditionFormula>ISPICKVAL(cgcloud__Promotion__r.TPM_Phase__c, &apos;Planning&apos;)  &amp;&amp;  (cgcloud__Shipment_Date_From__c  &gt;  cgcloud__Instore_Date_From__c)</errorConditionFormula>
    <errorMessage>Shipment start date must be less than or equal to In-store start date</errorMessage>
</ValidationRule>