force-app/main/default/objects/cgcloud__Tactic__c/validationRules/TPM_Tactic_ShipmentStartValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TPM_Tactic_ShipmentStartValidation</fullName>
    <active>true</active>
    <description>Validates if Shipment start date is greater than or equal to the current date</description>
    <errorConditionFormula>ISPICKVAL(cgcloud__Promotion__r.TPM_Phase__c, &apos;Planning&apos;) &amp;&amp; cgcloud__Shipment_Date_From__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Shipment Start Date must be greater than or equal to the current date</errorMessage>
</ValidationRule>