force-app/main/default/objects/cgcloud__Tactic__c/validationRules/TPMTacticShipmentInstoreEndValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TPMTacticShipmentInstoreEndValidation</fullName>
    <active>true</active>
    <description>Shipment End date must be less than or equal to In-store end date</description>
    <errorConditionFormula>ISPICKVAL( cgcloud__Promotion__r.TPM_Phase__c ,&apos;Planning&apos;) &amp;&amp; ( cgcloud__Shipment_Date_Thru__c &gt;  cgcloud__Instore_Date_Thru__c )</errorConditionFormula>
    <errorMessage>Shipment End date must be less than or equal to In-store end date</errorMessage>
</ValidationRule>